<resources>
    <string name="app_name">Inventory App </string>
    <string name="inventory_system">VD.18-05-23</string>
    <string name="item_code">Item Code </string>
    <string name="item_name">Item Name </string>
    <string name="item_qty">Item QTY </string>
    <string name="location">Location </string>
    <string name="sale">Sale </string>
    <string name="sale_price">Sale Price</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="previous_scan">Previous Scan </string>
    <string name="last_qty">Last QTY </string>
    <string name="all_qty">All QTY</string>
    <string name="save">save</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="New">New</string>
    <string name="collecting_data">Collecting Data</string>
    <string name="end_vhf">End VHF</string>
    <string name="export">Export</string>
    <string name="woc_s">WOC.S.</string>
    <string name="from_store">From Store </string>
    <string name="to_store">To Store </string>
    <string name="transfer_data">Transfer Data</string>
    <string name="collecting_data_by_expiry_date"> By Expiry Date</string>
    <string name="total">Total</string>
    <string name="exp_date">Exp.Date</string>
    <string name="extract">Extract</string>
    <string name="batch">Batch</string>
    <string name="avl_qty">AVL.QTY</string>
    <string name="cost_prc">Cost Prc</string>
    <string name="sale_prc">Sale Prc</string>
    <string name="collecting_data_with_receipt"> With Receipt</string>
    <string name="open">Open</string>
    <string name="contain_header">Contain Header</string>
    <string name="file_path">File Path</string>
    <string name="import_item_from_text_file">Import Item From Text File</string>
    <string name="export_item_data_to_text">Export Item Data </string>
    <string name="update_qty">Update QTY</string>
    <string name="prepare">Prepare</string>
    <string name="del">Del</string>
    <string name="r_del">R.Del</string>
    <string name="export_transfer_item_data">Export Transfer Item Data</string>
    <string name="export_item_data_by_expiry">Export Item Data By Expiry</string>
    <string name="export_alternative_code">Export Alternative Code</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="_0">0</string>
    <string name="accumulate_item">Accumulate Item</string>
    <string name="new_item">New Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_all_item">Delete All Item</string>
    <string name="alternate">Alternate</string>
    <string name="item">Item</string>
    <string name="collecting">Collecting</string>
    <string name="report">Report</string>
    <string name="tools">Tools</string>
    <string name="print_item_barcode">Print Item Barcode</string>
    <string name="receive_data_from_server">Receive Data From Server</string>
    <string name="send_data_to_server">Send Data To Server</string>
    <string name="printer_setting">Printer Setting</string>
    <string name="print_shelf_tag">Print Shelf Tag</string>
    <string name="collecting_data_by_org_code"> By Org Code</string>
    <string name="user_name">User Name :</string>
    <string name="date">Date :</string>
    <string name="_1">1</string>
    <string name="falcons_soft_inventory_application">Falcons Soft. Inventory Application</string>
    <string name="receipt_no">Receipt NO</string>
    <string name="done">Done</string>
    <string name="list_of_update">List Of Update</string>
    <string name="serial_no">Serial No.</string>
    <string name="up_qty">Up. Qty</string>
    <string name="item_name_item_code">Item Name/Item Code :</string>
    <string name="your_note">Your Note</string>
    <string name="alert_message">Alert Message</string>
    <string name="item_menu">item menu</string>
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="title_activity_main"> </string>
    <string name="check_item_price">Check Item Price</string>
    <string name="confirm_price">Check price</string>
    <string name="main_setting">Main Setting</string>
    <string name="store_name">Store Name </string>
    <string name="delete">Delete !</string>
    <string name="allItemDelete"> you want to Delete All Items in Table ?</string>
    <string name="delete_item_">you want to Delete this Item ...</string>
    <string name="insertData">please Insert All data in Filed .</string>
    <string name="itemNotFoundAlert">This item not found please add this item before</string>
    <string name="cancel">Cancel</string>
    <string name="areYouSurre">Are you sure?</string>
    <string name="exitfromapp">Exit From App ...</string>
    <string name="exitMessage">you are sure you want to Exit From App ?</string>
    <string name="notless">Copy Not Less Than 1</string>
    <string name="fromtable">from  Table ?</string>
    <string name="itemFoundAlert">This item Found please add another item</string>
    <string name="notcorrectusernamepass">User Name or Password Incorrect please try again</string>
    <string name="interPass">Please enter Password</string>
    <string name="enterUsername">Please enter User Name</string>
    <string name="enterPassAndUser"><![CDATA[Please enter User Name & Password]]></string>
    <string name="ok">Ok</string>
    <string name="deleteAllItemInfo">Delete All Item Info !!!</string>
    <string name="deleteAllItemByLoc">Delete All Item In This Location !!!</string>
    <string name="choess">Click Operation</string>
    <string name="deletethisitem">you are sour you want to Delete This Item</string>
    <string name="acumalateitem">Item In Table Is Accumlate Item</string>
    <string name="qty_0">can\'t update when New Qty = 0.0</string>
    <string name="newq">Please enter new Qty</string>
    <string name="upsucess">Update Successful</string>
    <string name="oldornewnotcorect">old password or new  password not correct</string>
    <string name="saveMainSetting">Save Main Setting</string>
    <string name="allExport">All Data Export</string>
    <string name="allTexoprt">All Data Transfer Export</string>
    <string name="noexport">No Item For Export</string>
    <string name="send_and_recieve">Send and Recieve</string>
    <string name="reset">Reset</string>
    <string name="accumlate_item">Accumlate Item</string>
    <string name="qty">Qty</string>
    <string name="ip">IP :</string>
    <string name="store_no">Store No :</string>
    <string name="barcode">Barcode</string>
    <string name="copy">Copy :</string>
    <string name="barcode_design">Barcode Design</string>
    <string name="price">Price</string>
    <string name="print">Print</string>
    <string name="item_price">Item Price</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="shelf_tag_design">Shelf Tag Design</string>
    <string name="des_2">Des.2</string>
    <string name="des_3">Des.3</string>
    <string name="des_1">Des.1</string>
    <string name="des_4">Des.4</string>
    <string name="des_5">Des.5</string>
    <string name="item_type">Item Type :</string>
    <string name="inventory_item">Inventory Item</string>
    <string name="old_qty">Old Qty :</string>
    <string name="new_qty">new Qty :</string>
    <string name="log_in">log in</string>
    <string name="setting">Setting</string>
    <string name="with_exp">With Exp.</string>
    <string name="save_SUCCESS">All Saved SUCCESS!</string>
    <string name="importSuc">Import SUCCESS</string>
    <string name="sucess">Success...</string>
    <string name="scan"><![CDATA[Scanned ->]]></string>
    <string name="rowdelete">Your ROW has been deleted!</string>
    <string name="canceldelete">cancel delete item :)</string>
    <string name="aresure">Are you sure?</string>
    <string name="canselexit">Cancel Exit From App :)</string>
    <string name="cancelImport">Cancel Import Data :)</string>
    <string name="savingitemswitch">Saving Item Switch in DB ...</string>
    <string name="saveitemswitch">Save Item Switch Success</string>
    <string name="saveitemcard">Save Item Card Success</string>
    <string name="savingindb">saving item card in db...</string>
    <string name="storesave">Saving Store In Db ...</string>
    <string name="importstor">Import Store</string>
    <string name="itemprice">Import Item Price ...</string>
    <string name="faildtoimport">Failed to Import Item Switch Data</string>
    <string name="importitemswitch">Import Item Switch ...</string>
    <string name="fildtoimportitemswitch">Failed to Import Item Card Data</string>
    <string name="ops">Oops...</string>
    <string name="importitemcard">Import Item Cardss ...</string>
    <string name="exportiteminfo">Export Item Info Loading...</string>
    <string name="exportriteminfosuc">Export Item Info Successfully...</string>
    <string name="exportiteminfosucess">Export  Item Info Successfully !</string>
    <string name="faildexport_iteminfo">Failed to Export Item Info !</string>
    <string name="ex_item_transfer">Export Item Transfer Loading...</string>
    <string name="exporttransfersucess">Export  Item Transfer Data Successfully!</string>
    <string name="faildExportTransfer">Failed to Export Item Transfer Data</string>
    <string name="lodaing">Loading</string>
    <string name="importData">import Data ...</string>
    <string name="importDataMessage">you are Sure you want to import Data ?</string>
    <string name="mainSetting">Please Add Main Setting</string>
    <string name="nomainSetting">No Setting So No Ip Please Add Ip !!!!</string>
    <string name="falidTogetdata">Failed to get Data .. Try Again</string>
    <string name="thisitemnotfound">This item Not Found</string>
    <string name="storeSave">Saving Store Success</string>
    <string name="Permission">No Bluetooth Permission</string>
    <string name="faildstore">Failed to import Store</string>
    <string name="faildunite">Failed to import Unite</string>
    <string name="faildUn">Failed to import units Name Table</string>
    <string name="faildU">Falcons Jard Web Server Application \n (GetItemUnit)</string>
    <string name="Import_Item_Card">Import Item Card</string>
    <string name="ImportItemSwitch">Import Item Switch</string>
    <string name="ImporItemStore">Import Item Store</string>
    <string name="NotCorrectPassword">Not Correct Password</string>
    <string name="print_assesst">print Assesst</string>
    <string name="fildtoimportitemAssets">Failed to Import Item Assets Data</string>
    <string name="importassets">Import Item Assets...</string>
    <string name="assestSave">Save Item Assets Success</string>
    <string name="not_minus">+</string>
</resources>