<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinerRaw"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/inventory_item"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="22-22-2002"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/item_type"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/accu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="AccuM Item"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <TextView
        android:id="@+id/textView59"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="__________________________"
        android:textColor="@color/black" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/itemCode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_code"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </TableRow>

    <TextView
        android:id="@+id/textView62"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

</LinearLayout>