<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinerRaw"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/itemCode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_code"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Qty "
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>
</LinearLayout>