<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/inv2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bac_"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_item"
            android:textColor="@color/grayLight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/orFloor"
            android:ems="10"
            android:textColor="@color/orFloor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/no_thing"
            android:orientation="vertical">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_code"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/itemCNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bac"
                    android:ems="10"
                    android:focusedByDefault="true"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@color/orFloor"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/itemNameNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bac"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@color/orFloor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:text="@string/sale_prc"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/itemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bac"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor"
                    android:textCursorDrawable="@color/orFloor"
                    android:textSize="16sp" />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchNew"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/saveNew"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/alternate"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deleteItem"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/delete_item"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/deleteAllItem"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/delete_all_item"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearNew"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="131dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_button"
                    android:text="@string/exit"
                    android:textColor="@color/orFloor"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>