<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inv2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bac_"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/list_of_update"
            android:textColor="@color/grayLight"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/orFloor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/no_thing"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/item_name_item_code"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/itemCodeUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_bac"
                    android:ems="10"
                    android:focusedByDefault="true"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>


            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_bac">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="1dp">

                    <TextView
                        android:id="@+id/textView64"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/item_code"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/item_name"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/item_qty"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/up_qty"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="1dp"
                    android:background="@color/textColor">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/orFloor"
                        android:gravity="center" />

                </TableRow>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:padding="5dp">

                    <TableLayout
                        android:id="@+id/Table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3dp">


                    </TableLayout>
                </ScrollView>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/done"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edit_button"
                    android:text="@string/done"
                    android:textColor="@color/orFloor" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edit_button"
                    android:text="@string/exit"
                    android:textColor="@color/orFloor" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>